--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -63,6 +63,8 @@ jobs:
 
     #   If the Autobuild fails above, remove it and uncomment the following three lines.
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
+    - name: Trufflehog Actions Scan
+      uses: edplato/trufflehog-actions-scan@v0.9l-beta
 
     # - run: |
     #   echo "Run, Build Application using script"
